--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "chroma-js": "^3.1.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
@@ -17,6 +18,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.3",
     "react-spinners": "^0.14.1",
     "web-vitals": "^2.1.4"
   },
